--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
 
     // All other dependencies for your app should also be here:
     implementation 'androidx.browser:browser:1.0.0'
+    implementation("com.spotify.android:auth:1.2.6")
 
 }
