--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,8 @@ dependencies {
     implementation 'androidx.browser:browser:1.0.0'
     implementation("com.spotify.android:auth:1.2.6")
     implementation 'androidx.browser:browser:1.2.0'
-
+    dependencies {
+        // ... ספריות אחרות
+        implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    }
 }
